<resources>
    <string name="app_name">Assignment 03</string>
    <string name="TextView">Welcome!!</string>
    <string name="Button">Start</string>
    <string name="RadioButton">Student</string>
    <string name="RadioButtonEmployee">Employee</string>
    <string name="RadioButtonOther">Other\n</string>
    <string name="TextViewName">Name\n</string>
    <string name="IdentInfoButton">Next</string>
    <string name="TextViewHeader">Identification Logo</string>
    <string name="identEmail">Email</string>
    <string name="EducationTextView">Education\n</string>
    <string name="demographic_Info">Demographic Info</string>
    <string name="education_Text">Education</string>
    <string name="Education_Val">N/A</string>
    <string name="Marital_Status">Marital Status:</string>
    <string name="MaritalStatus_Val">N/A</string>
    <string name="LivingStatus">Living Status</string>
    <string name="Income">Income:</string>
    <string name="SelectButton">Select</string>
    <string name="Info">What is the highest degree or level of\neducation you have completed</string>
    <string name="Before_high_school">Before High School</string>
    <string name="HighSchoo">High School</string>
    <string name="Bachelor">Bachelor\'s Degree</string>
    <string name="Masters">Master\'s Degree</string>
    <string name="phd">Ph.D or higher</string>
    <string name="Trade">Trade School</string>
    <string name="Prefer">Prefer not to say</string>
    <string name="educationCancel">Cancel</string>
    <string name="educationSubmit" />
    <string name="EducationSubmit">Submit</string>
    <string name="educationLevel">Select Education Level</string>
    <string name="MAritalStatusHEader">Select Marital Status</string>
    <string name="Ststus">What is your marital status?</string>
    <string name="NotMarried">Not Married</string>
    <string name="Married">Married</string>
    <string name="NOtTosay" />
    <string name="PreferNotzTOSay">Prefer not to say</string>
    <string name="maritalCancel">Cancel</string>
    <string name="maritalSubmit">Submit</string>
    <string name="livingStatusInstructions">Which of the following describes your\nliving status?</string>
    <string name="living1">Homeowner</string>
    <string name="living2">Renter</string>
    <string name="Living3">Lease</string>
    <string name="living4">Other</string>
    <string name="Leasing5">Prefer not to say</string>
    <string name="LivingCancle" />
    <string name="livingcancel">Cancel</string>
    <string name="LivingSubmit">Submit</string>
    <string name="LivingStatusHeader">Select Living Status</string>
    <string name="range"><![CDATA[$50K to < $100K]]></string>
    <string name="incomeHeader">Household Income</string>
    <string name="incomeCancel">Cancel</string>
    <string name="incomeSubmit">Submit</string>
</resources>