<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".education_level">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="167dp"
        android:text="@string/educationLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="307dp"
        android:layout_height="44dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="57dp"
        android:text="@string/Info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <RadioGroup
        android:id="@+id/educationGroup"
        android:layout_width="164dp"
        android:layout_height="342dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="248dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <RadioButton
            android:id="@+id/education1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Before_high_school" />

        <RadioButton
            android:id="@+id/education2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HighSchoo" />

        <RadioButton
            android:id="@+id/education3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bachelor" />

        <RadioButton
            android:id="@+id/education4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Masters" />

        <RadioButton
            android:id="@+id/education5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phd" />

        <RadioButton
            android:id="@+id/education6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Trade" />

        <RadioButton
            android:id="@+id/education7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Prefer" />
    </RadioGroup>

    <Button
        android:id="@+id/education8"
        android:layout_width="142dp"
        android:layout_height="49dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="70dp"
        android:text="@string/educationCancel"
        app:layout_constraintBottom_toBottomOf="@+id/education9"
        app:layout_constraintEnd_toStartOf="@+id/education9"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/education9"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/education9"
        android:layout_width="136dp"
        android:layout_height="51dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="40dp"
        android:text="@string/EducationSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/educationGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>