<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".livingStatus">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="176dp"
        android:text="@string/LivingStatusHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="123dp"
        android:text="@string/livingStatusInstructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <RadioGroup
        android:id="@+id/radioGroupLiving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="246dp"
        android:layout_marginBottom="458dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15">

        <RadioButton
            android:id="@+id/living1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/living1" />

        <RadioButton
            android:id="@+id/libing2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/living2" />

        <RadioButton
            android:id="@+id/living3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Living3" />

        <RadioButton
            android:id="@+id/living4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/living4" />

        <RadioButton
            android:id="@+id/living5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Leasing5" />
    </RadioGroup>

    <Button
        android:id="@+id/livingCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="124dp"
        android:text="@string/livingcancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/livingSubmit"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/livingSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="124dp"
        android:text="@string/LivingSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>