<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".maritalStatus">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="131dp"
        android:text="@string/MAritalStatusHEader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="211dp"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="230dp"
        android:text="@string/Ststus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupMarital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="207dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <RadioButton
            android:id="@+id/marital1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NotMarried" />

        <RadioButton
            android:id="@+id/marital2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Married" />

        <RadioButton
            android:id="@+id/marital3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PreferNotzTOSay" />
    </RadioGroup>

    <Button
        android:id="@+id/maritalCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="414dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="94dp"
        android:text="@string/maritalCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/maritalSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupMarital" />

    <Button
        android:id="@+id/maritalSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="632dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="92dp"
        android:text="@string/maritalSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />
</androidx.constraintlayout.widget.ConstraintLayout>