<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".identificationInfo">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="192dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:text="@string/TextViewHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/identInputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/identInputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/identEmail"
        app:layout_constraintTop_toBottomOf="@+id/identInputName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="96dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:text="@string/TextViewName"
        app:layout_constraintBottom_toBottomOf="@+id/identInputName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/identInputName" />

    <TextView
        android:id="@+id/identEmail"
        android:layout_width="103dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:text="@string/identEmail"
        app:layout_constraintBottom_toBottomOf="@+id/identInputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/identInputEmail" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/rdIdent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rdIdent" />

    <RadioGroup
        android:id="@+id/rdIdent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/identInputEmail"
        app:layout_constraintTop_toBottomOf="@+id/identInputEmail">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButtonEmployee" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButtonOther" />
    </RadioGroup>

    <Button
        android:id="@+id/IdentInfoButton"
        android:layout_width="273dp"
        android:layout_height="48dp"
        android:text="@string/IdentInfoButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdIdent"
        app:layout_constraintVertical_bias="0.587" />

</androidx.constraintlayout.widget.ConstraintLayout>